Fixed a major timetable responsiveness issue that caused friday to be wrapped and thus hidden in the timetable

--- a/deliverables/yres_scheduler/yres_scheduler_frontend/src/app/globals.css
+++ b/deliverables/yres_scheduler/yres_scheduler_frontend/src/app/globals.css
@@ -202,6 +202,10 @@ body, html{
   border-radius: 5px;
 }
 
+#schedule-timetable .styles-module_time_table_wrapper__TT-cf,
+#schedule-timetable .styles-module_time_table_wrapper__TT-cf .styles-module_day__aQ2Tt {
+  flex-wrap: nowrap !important;
+}
 .timetable-header {
   background-color: #3D96AB !important;
 }
